fix sign up form input misalign

--- a/app/assets/stylesheets/styles/session_form.scss
+++ b/app/assets/stylesheets/styles/session_form.scss
@@ -141,9 +141,10 @@ html {
   padding: 0;
   margin: 0;
   display: inline;
-  // flex-direction: row;
+  justify-content: center;
+  flex-direction: row;
   flex-flow: row wrap;
-  // -ms-flex-flow: row wrap;
+  // background-color: blue;
 }
 // level 2
 .row-1-contain {
@@ -172,9 +173,26 @@ html {
   text-align: start;
   border-bottom: 1px solid #d8dade;
 }
+
+#row-1-2-input {
+  background-color: green;
+  height: 32px;
+  width: 100%;
+  padding: 0 8px;
+  border: 0;
+  border-radius: 0;
+  background-color: transparent;
+  text-align: start;
+  border-bottom: 1px solid #d8dade;
+}
 #row-1-input:focus {
   border-bottom: 2px solid #188fff;
 }
+#row-1-2-input:focus {
+  border-bottom: 2px solid #188fff;
+}
+
+
 // email input
 .row-email-contain {
   width: 92%;
